Hid lifear content management for testing

--- a/html-elements/nav.html
+++ b/html-elements/nav.html
@@ -13,7 +13,7 @@
     <li><a class="navText" href="/">Home</a></li>
     <li><a class="navText" href="lifear.html">LifeAR</a>
       <ul class="innerMenu">
-        <li><a class="navTextInner" href="lifear-portal.html" target="_blank">Manage Your Content</a></li>
+        <!-- <li><a class="navTextInner" href="lifear-portal.html" target="_blank">Manage Your Content</a></li> -->
         <li><a class="navTextInner" href="lifear-gallery.html">Target Gallery</a></li>
         <li><a class="navTextInner" href="lifear_business.html#Pricing">Pricing</a></li>
         <li><a class="navTextInner" href="lifear-faq.html">Help/FAQ</a></li>
