Added LifeAR rebranding message

--- a/lifear-faq.html
+++ b/lifear-faq.html
@@ -23,6 +23,10 @@
     </script>
     <!-- main content -->
     <div id="contents">
+        <div id="disclaimer"></div>
+        <script>
+            $("#disclaimer").load("html-elements/LifeARDisclaimer.html");
+        </script>   
         <div id="carouselSection" class="Section">
             <h2 class="text-blue">Tips</h2>
             <div id="imageCarousel"></div>
