--- a/lifear-legal.html
+++ b/lifear-legal.html
@@ -24,6 +24,10 @@
     </script>
   <!-- main content -->
   <div id="contents">
+    <div id="disclaimer"></div>
+    <script>
+        $("#disclaimer").load("html-elements/LifeARDisclaimer.html");
+    </script>   
         <br>
         <h2 class="text-lifear-dark">Terms & Conditions</h2>
         <p>
