--- a/lifear_business.html
+++ b/lifear_business.html
@@ -33,6 +33,10 @@
     </script>
     <!-- main content -->
     <div id="contents">
+        <div id="disclaimer"></div>
+        <script>
+            $("#disclaimer").load("html-elements/LifeARDisclaimer.html");
+        </script>   
         <div class="Section">
             <h2 class="text-lifear">Modernizing Traditional Print Media</h2>
             <p>LifeAR is a universal augmented reality (AR) platform
