--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,7 @@
                     <div class="appButton blue-border">
                         <img class="appLogo" src="Resources/pages/lifear/LifeARLogo.png">
                         <h3>LifeAR</h3>
+                        <h5 style="color: grey">This project will re-branded and re-built shortly</h5>
                         <p>Modernizing traditional print media into dynamic customer engagement tools</p>
                         <a class="button btn-blue" href="lifear.html">Learn More</a>
                     </div>
