--- a/lifear-demo.html
+++ b/lifear-demo.html
@@ -23,6 +23,10 @@
     </script>
     <!-- main content -->
     <div id="contents">
+        <div id="disclaimer"></div>
+        <script>
+            $("#disclaimer").load("html-elements/LifeARDisclaimer.html");
+        </script>   
         <div id="AboutSection" class="Section">
             <h2 class="text-blue" style="text-align: center;"> Scan the image below in the LifeAR demo mode to see a demonstration of what LifeAR can do</h2>
             <img src="Resources/pages/lifear/gallery/dgappscard.jpg" />
