--- a/lifear_consumer.html
+++ b/lifear_consumer.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="scss/main.css">
@@ -33,6 +32,11 @@
     </script>
     <!-- main content -->
     <div id="contents">
+        <div id="disclaimer"></div>
+        <script>
+            $("#disclaimer").load("html-elements/LifeARDisclaimer.html");
+        </script>   
+        
         <div class="Section">
             <h2 class="text-lifear">Modernizing Traditional Print Media</h2>
             <p>LifeAR is a universal augmented reality (AR) platform
