added lifear disclaimer banner

--- a/html-elements/LifeARDisclaimer.html
+++ b/html-elements/LifeARDisclaimer.html
@@ -1,7 +1,7 @@
 <div class="Section" style="background-color: #df4646; margin: 0; padding: 5%;">
     <h2 style="color: white;">Please note that LifeAR has been acquired by another company. All of the LifeAR pages on
-        this website are for archival purposes. I have begun working on a new similar augmented reality platform as LifeAR,
+        this website are for archival purposes. I have begun working on a new augmented reality platform similar to LifeAR
         which will eventually be released under a new name. It will offer more features, more customizability of AR content and 
-        an provide a web experience viewer interface!
+        provide a web-based viewer interface!
     </h2>
 </div>
